<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_townhall"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"
            android:title="@string/town_halll" />

        <item
            android:id="@+id/nav_menu_builder"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"
            android:title="@string/builder_hall" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_menu_share"
            android:icon="@drawable/ic_share"
            android:iconTint="@color/black"
            android:title="@string/share" >
        </item>

        <item
            android:id="@+id/nav_menu_info"
            android:icon="@drawable/ic_info"
            android:iconTint="@color/black"
            android:title="@string/app_info" >
        </item>
    </group>

</menu>