<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/arc_layout"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_icon"
            android:layout_width="@dimen/p50"
            android:layout_height="@dimen/p50"
            android:layout_marginTop="@dimen/sp18"
            android:layout_centerHorizontal="true"
            android:scaleType="center"
            android:src="@drawable/app_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/sp18"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:fontFamily="@font/roboto_light"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_icon"
            android:text="@string/app_name"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_description"
        android:padding="@dimen/p8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content"
            android:layout_width="@dimen/h250"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/p24"
            android:justificationMode="inter_word"
            android:textSize="@dimen/sp18"
            android:text="@string/copyright"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_contact"
        android:padding="@dimen/p24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            android:layout_width="@dimen/h150"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/kontak"/>
    </RelativeLayout>

</LinearLayout>